[project]
name = "sdps-45m"
version = "0.1.0"
description = "Tools of sdps for the Nobeyama 45m Telescope"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "astropy>=6.1,<8.0",
    "dems>=2024.7,<2025.0",
    "fire>=0.7,<1.0",
    "fmflow>=0.5,<1.0",
    "numpy>=2.0,<3.0",
    "xarray>=2024.0,<2026.0",
    "zarr>=2.0,<3.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[project.license]
file = "LICENSE"

[project.scripts]
sdps-45m = "sdps_45m:main"

[project.urls]
homepage = "https://sdps-dev.github.io/45m/v0.1.0"
repository = "https://github.com/sdps-dev/45m"

[dependency-groups]
dev = [
    "black>=25.0,<26.0",
    "ipython>=8.0,<10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
