[project]
name = "sdps-45m"
version = "0.4.0"
description = "Tools of sdps for the Nobeyama 45m Telescope"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "astropy>=6,<8",
    "dems>=2025,<2026",
    "fire>=0.7,<1.0",
    "fmflow>=0.5,<1.0",
    "numpy>=2,<3",
    "xarray>=2024,<2026",
    "zarr>=2,<3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[project.license]
file = "LICENSE"

[project.scripts]
sdps-45m = "sdps_45m:main"

[project.urls]
homepage = "https://sdps-dev.github.io/45m/v0.3.0"
repository = "https://github.com/sdps-dev/45m"

[dependency-groups]
dev = [
    "black>=25,<26",
    "ipython>=8,<10",
    "jupyter>=1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
